update Jenkins to add RunCMAB